--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,6 @@
 roles:
   - name: robertdebock.bootstrap
   - name: robertdebock.selinux
+collections:
+  - name: ansible.builtin
+  - name: community.general
