--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,7 +22,7 @@
     - ansible_selinux.status == "enabled"
 
 - name: generate host key
-  command: "/usr/bin/ssh-keygen -q -t {{ item }} -f /etc/ssh/ssh_host_{{ item }}_key -C '' -N ''"
+  ansible.builtin.command: "/usr/bin/ssh-keygen -q -t {{ item }} -f /etc/ssh/ssh_host_{{ item }}_key -C '' -N ''"
   args:
     creates: "/etc/ssh/ssh_host_{{ item }}_key"
   loop: "{{ openssh_key_types }}"
