--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -66,7 +66,7 @@
     that:
       - openssh_permit_root_login is defined
       - openssh_permit_root_login is string
-      - openssh_permit_root_login in [ "yes", "no" ]
+      - openssh_permit_root_login in [ "yes", "no", "without-password", "prohibit-password", "forced-commands-only" ]
     quiet: yes
 
 - name: test if openssh_strict_modes is set correctly
