--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -99,5 +99,5 @@ openssh_accept_envs:
 openssh_subsystem: sftp {{ openssh_sftp_server }}
 
 # Restrict access to this (space separated list) of users.
-# For example: `openssh_allow_users: root my_user`
+# For example: "openssh_allow_users: root my_user"
 # openssh_allow_users: root
