--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,3 +51,10 @@
     name: "{{ openssh_service }}"
     state: started
     enabled: yes
+
+- name: restart openssh immediately
+  ansible.builtin.service:
+    name: "{{ openssh_service }}"
+    state: restarted
+  when:
+    - openssh_restart_immediately | bool
