--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,5 +6,5 @@
     name: "{{ openssh_service }}"
     state: restarted
   when:
-    - not ansible_check_mode | bool
-    - not openssh_restart_immediately | bool
+    - not ansible_check_mode
+    - not openssh_restart_immediately
