--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -52,9 +52,7 @@
     state: started
     enabled: yes
 
-- name: restart openssh immediately
-  ansible.builtin.service:
-    name: "{{ openssh_service }}"
-    state: restarted
+- name: flush handlers
+  meta: flush_handlers
   when:
-    - openssh_restart_immediately | bool
+    - openssh_restart_immediately
