--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -98,6 +98,8 @@ openssh_accept_envs:
 
 openssh_subsystem: sftp {{ openssh_sftp_server }}
 
+openssh_trusted_user_ca_keys: none
+
 # Restrict access to this (space separated list) of users or groups.
 # For example: "openssh_allow_users: root my_user"
 # openssh_allow_users: root
