ansible-lint: All names should start with an uppercase letter.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for openssh
 
-- name: restart openssh
+- name: Restart openssh
   ansible.builtin.service:
     name: "{{ openssh_service }}"
     state: restarted
