--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,4 +7,4 @@
     state: restarted
   when:
     - not ansible_check_mode
-    - not openssh_restart_immediately
+    - openssh_restart_immediately
